# atlas

./: CONTRIBUTING.md  README.md  local.properties
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/atlas/app/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/book1/: info.json
android/app/src/main/assets/book2/: 1.txt  2.txt  info.json
android/app/src/main/java/com/atlas/app/: AppModels.kt  HomeScreen.kt  MainActivity.kt  Models.kt  NovelScreen.kt  ReaderScreen.kt  TtsManager.kt  TtsScreen.kt
android/app/src/main/java/com/atlas/app/components/: LibraryItem.kt  SearchAppBar.kt
android/app/src/main/java/com/atlas/app/data/: AppDatabase.kt  AppModels.kt
android/app/src/main/java/com/atlas/app/screens/: ChaptersScreen.kt  ReaderScreen.kt
android/app/src/main/res/layout/: activity_tts.xml
android/app/src/main/res/raw/: sample.txt
android/app/src/test/java/com/atlas/app/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
backend/: design.md  pyproject.toml
backend/tts/: Mother_of_Learning.epub  engine.py
backend/webscrape/: build.gradle.kts  settings.gradle.kts
backend/webscrape/gradle/wrapper/: gradle-wrapper.properties
backend/webscrape/src/main/kotlin/: Models.kt  Test.kt
backend/webscrape/src/main/kotlin/sources/: NovelFire.kt  NovelSource.kt  RoyalRoad.kt
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
