[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "chatterbox-tts==0.1.3",
    "torch",
    "torchaudio",
    "setuptools",
]

[dependency-groups]
dev = []

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
